prediction rest api

--- a/jupyter/notebooks/003_modeling.ipynb
+++ b/jupyter/notebooks/003_modeling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "d27766c8-c711-45e6-8bdd-5b8f90c1c67b",
    "metadata": {},
    "outputs": [],
@@ -14,12 +14,13 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.svm import SVC\n",
     "from sklearn.neural_network import MLPClassifier\n",
-    "from sklearn.metrics import accuracy_score"
+    "from sklearn.metrics import accuracy_score\n",
+    "import joblib"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "fd7ab119-c324-4ffe-910b-5ced6aeebf3a",
    "metadata": {},
    "outputs": [
@@ -53,59 +54,59 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>308</th>\n",
-       "      <td>4.61600</td>\n",
-       "      <td>10.17880</td>\n",
-       "      <td>-4.218500</td>\n",
-       "      <td>-4.424500</td>\n",
+       "      <th>0</th>\n",
+       "      <td>3.62160</td>\n",
+       "      <td>8.66610</td>\n",
+       "      <td>-2.80730</td>\n",
+       "      <td>-0.44699</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1100</th>\n",
-       "      <td>1.43780</td>\n",
-       "      <td>0.66837</td>\n",
-       "      <td>-2.026700</td>\n",
-       "      <td>1.027100</td>\n",
+       "      <th>1313</th>\n",
+       "      <td>-1.50780</td>\n",
+       "      <td>-7.31910</td>\n",
+       "      <td>7.89810</td>\n",
+       "      <td>1.22890</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1265</th>\n",
-       "      <td>-2.54630</td>\n",
-       "      <td>3.11010</td>\n",
-       "      <td>-0.832280</td>\n",
-       "      <td>-3.035800</td>\n",
+       "      <th>1314</th>\n",
+       "      <td>-3.50600</td>\n",
+       "      <td>-12.56670</td>\n",
+       "      <td>15.16060</td>\n",
+       "      <td>-0.75216</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1167</th>\n",
-       "      <td>-0.87874</td>\n",
-       "      <td>-2.21210</td>\n",
-       "      <td>-0.051701</td>\n",
-       "      <td>0.099985</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>547</th>\n",
-       "      <td>3.46470</td>\n",
-       "      <td>-3.91720</td>\n",
-       "      <td>3.974600</td>\n",
-       "      <td>0.361190</td>\n",
+       "      <th>21</th>\n",
+       "      <td>0.32920</td>\n",
+       "      <td>-4.45520</td>\n",
+       "      <td>4.57180</td>\n",
+       "      <td>-0.98880</td>\n",
        "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>892</th>\n",
+       "      <td>0.21431</td>\n",
+       "      <td>-0.69529</td>\n",
+       "      <td>0.87711</td>\n",
+       "      <td>0.29653</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      variance  skewness  curtosis   entropy  not_genuine\n",
-       "308    4.61600  10.17880 -4.218500 -4.424500            0\n",
-       "1100   1.43780   0.66837 -2.026700  1.027100            1\n",
-       "1265  -2.54630   3.11010 -0.832280 -3.035800            1\n",
-       "1167  -0.87874  -2.21210 -0.051701  0.099985            1\n",
-       "547    3.46470  -3.91720  3.974600  0.361190            0"
+       "      variance  skewness  curtosis  entropy  not_genuine\n",
+       "0      3.62160   8.66610  -2.80730 -0.44699            0\n",
+       "1313  -1.50780  -7.31910   7.89810  1.22890            1\n",
+       "1314  -3.50600 -12.56670  15.16060 -0.75216            1\n",
+       "21     0.32920  -4.45520   4.57180 -0.98880            0\n",
+       "892    0.21431  -0.69529   0.87711  0.29653            1"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "98c6c8d0-9b52-4ba1-a414-c0b7804edd4e",
    "metadata": {},
    "outputs": [],
@@ -128,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "2b4c0107-d6f7-44df-8826-cfabad665705",
    "metadata": {},
    "outputs": [],
@@ -144,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "8a81b5ad-212d-42b1-849e-f67d337fa759",
    "metadata": {},
    "outputs": [],
@@ -154,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "0c118821-b6bf-4eef-afa4-73af08d51f18",
    "metadata": {},
    "outputs": [
@@ -184,8 +185,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "id": "8bc5f571-262d-47bf-86ae-1080eb1f254b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['../output/classifier.pkl']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "best_classifier = [classifier[1] for classifier in classifiers if classifier[0] == 'MLPClassifier'][0]\n",
+    "joblib.dump(best_classifier, '../output/classifier.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "6074ef1b-0812-44ff-8932-6de171b7b6d0",
+   "id": "5a2ed5a5-b107-450e-9d4c-f1d38f3af561",
    "metadata": {},
    "outputs": [],
    "source": []
